fixes readability of annotations MVN-51

--- a/css/styles.less
+++ b/css/styles.less
@@ -580,6 +580,7 @@ a {
 		z-index: 2;
 		color: #333;
 		opacity: 1;
+		background-color: lighten(#00B3B0, 50%);
 	}
 }
 
